# ncdprime

./: .gitignore  CONTRIBUTING.md  README.md  index.cjs  index.d.ts  index.js  napi.config.json  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  GETTING_STARTED.md
python/: README.md  pyproject.toml
python/src/ncdprime/: __init__.py
python/src/ncdprime/cli/: cmd_config.py  main.py
python/src/ncdprime/compressors/: base.py
python/src/ncdprime/core/: __init__.py  config.py
python/src/ncdprime/plugins/: registry.py
python/tests/: test_cli_gen_run.py  test_cli_smoke.py
rust/: Cargo.toml
rust/ncdprime-cli/: Cargo.toml
rust/ncdprime-cli/src/: eta.rs  inputs.rs  lib.rs  main.rs  matrix.rs
rust/ncdprime-cli/tests/: eta_more.rs  eta_refit_policy.rs  eta_smoke.rs
rust/ncdprime-core/: Cargo.toml
rust/ncdprime-core/src/: factory.rs  lib.rs
rust/ncdprime-core/tests/: matrix_cache_counts.rs  ncd_smoke.rs
rust/ncdprime-node/: Cargo.toml
rust/ncdprime-node/src/: lib.rs
rust/ncdprime-py/: Cargo.toml
rust/ncdprime-py/src/: lib.rs
rust/ncdprime-server/: Cargo.toml  README.md
rust/ncdprime-server/src/: main.rs
src/: api.ts  backend.ts  cli.ts  index.ts  inputs.ts  matrix.ts  ncd.ts
src/ncdprime/: estimator.py
src/ncdprime/cli/: cmd_compressors.py  cmd_gen.py  cmd_run.py
src/ncdprime/compressors/: __init__.py  gzipc.py
src/ncdprime/core/: matrix.py  ncd.py
src/ncdprime/io/: dataset.py
src/ncdprime/plugins/: __init__.py
test/: api_auto.test.ts  matrix_cli.test.ts  native_load.test.ts  ncd.test.js  ncd.test.ts  ncd_from_sizes.test.ts
tests/: test_estimator.py
