[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncdprime"
version = "0.1.0"
description = "NCD utility: directory matrix generation and compression plugins"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "OpenClaw"}]
dependencies = [
  "typer>=0.12",
  "rich>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
ncd = "ncdprime.cli.main:app"

# Plugin interface: compressors register under this entry point group.
[project.entry-points."ncdprime.compressors"]
# Example:
# zstd = "ncdprime.compressors.zstd:ZstdCompressor"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/ncdprime"]

[tool.hatch.build.targets.wheel.force-include]
"src/ncdprime/py.typed" = "ncdprime/py.typed"
