[package]
name = "ncdprime-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
ncdprime-core = { path = "../ncdprime-core" }

# For matrix subcommand set-loading + output formatting

[lib]
name = "ncdprime_cli"
path = "src/lib.rs"
